fix h1 was too small

--- a/1-TP_HTML_CSS_FORM/CSS/style.css
+++ b/1-TP_HTML_CSS_FORM/CSS/style.css
@@ -10,7 +10,7 @@ h1 {
     color: #EF233C;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
-    font-size: larger;
+    font-size: 8em;
 }
 
 p {
